--- a/README
+++ b/README
@@ -407,6 +407,6 @@ IF SOMETHING GOES WRONG:
    point where your system crashed is "l *0xXXXXXXXX". (Replace the XXXes
    with the EIP value.)
 
-   gdb'ing a non-running kernel currently fails because gdb (wrongly)
+   gdb'ing a non-running kernel currently fails because gdb (wrongly),
    disregards the starting offset for which the kernel is compiled.
 
